In lib Sql: working on schema view

--- a/libs/Sql/CMakeLists.txt
+++ b/libs/Sql/CMakeLists.txt
@@ -50,6 +50,7 @@ set(SOURCES_FILES
     src/Mdt/Sql/Schema/JoinClause.cpp
     src/Mdt/Sql/Schema/JoinHelper.cpp
     src/Mdt/Sql/Schema/View.cpp
+    src/Mdt/Sql/Schema/ViewSqlTransform.cpp
     src/Mdt/Sql/Schema/Schema.cpp
 )
 
