In lib Sql: working on primary keys

--- a/libs/Sql/tests/CMakeLists.txt
+++ b/libs/Sql/tests/CMakeLists.txt
@@ -34,6 +34,7 @@ endfunction()
 #================= Tests ====================
 
 addSqlTest("SimpleTypesTest")
+addSqlTest("FieldNameTest")
 addSqlTest("SelectFieldTest")
 addSqlTest("ExpressionTest")
 addSqlTest("WhereExpressionTest")
@@ -44,6 +45,8 @@ addSqlTest("JoinClauseTest")
 addSqlTest("FromClauseTest")
 addSqlTest("SelectStatementTest")
 addSqlTest("QueryTest")
+addSqlTest("SchemaPrimaryKeyTest")
+addSqlTest("SchemaForeignKeyTest")
 addSqlTest("SchemaTest")
 addSqlTest("SchemaDriverTest")
 addSqlTest("SchemaDriverSqliteTest")
