In lib Sql: working schema table

--- a/libs/Sql/tests/CMakeLists.txt
+++ b/libs/Sql/tests/CMakeLists.txt
@@ -47,6 +47,7 @@ addSqlTest("SelectStatementTest")
 addSqlTest("QueryTest")
 addSqlTest("SchemaPrimaryKeyTest")
 addSqlTest("SchemaForeignKeyTest")
+addSqlTest("SchemaTableTest")
 addSqlTest("SchemaTest")
 addSqlTest("SchemaDriverTest")
 addSqlTest("SchemaDriverSqliteTest")
