In lib Sql: working on foreign key

--- a/libs/Sql/tests/CMakeLists.txt
+++ b/libs/Sql/tests/CMakeLists.txt
@@ -45,6 +45,7 @@ addSqlTest("JoinClauseTest")
 addSqlTest("FromClauseTest")
 addSqlTest("SelectStatementTest")
 addSqlTest("QueryTest")
+addSqlTest("SchemaFieldTest")
 addSqlTest("SchemaPrimaryKeyTest")
 addSqlTest("SchemaForeignKeyTest")
 addSqlTest("SchemaTableTest")
