In lib Sql: working on schema field list

--- a/libs/Sql/CMakeLists.txt
+++ b/libs/Sql/CMakeLists.txt
@@ -36,6 +36,7 @@ set(SOURCES_FILES
     src/Mdt/Sql/Schema/DriverSQLite.cpp
     src/Mdt/Sql/Schema/DriverMySql.cpp
     src/Mdt/Sql/Schema/DriverPostgreSQL.cpp
+    src/Mdt/Sql/Schema/FieldList.cpp
     src/Mdt/Sql/Schema/FieldTypeName.cpp
     src/Mdt/Sql/Schema/FieldTypeListModel.cpp
     src/Mdt/Sql/Schema/PrimaryKeyContainer.cpp
