--- a/libs/ItemEditor/CMakeLists.txt
+++ b/libs/ItemEditor/CMakeLists.txt
@@ -13,6 +13,7 @@ set(SOURCES_FILES
     src/Mdt/ItemEditor/InsertAction.cpp
     src/Mdt/ItemEditor/RemoveAction.cpp
     src/Mdt/ItemEditor/EditionActions.cpp
+    src/Mdt/ItemEditor/LikeExpressionRegexTransform.cpp
     src/Mdt/ItemEditor/FilterProxyModel.cpp
     src/Mdt/ItemEditor/ControllerStatePermission.cpp
     src/Mdt/ItemEditor/AbstractController.cpp
