--- a/libs/Sql/tests/CMakeLists.txt
+++ b/libs/Sql/tests/CMakeLists.txt
@@ -39,6 +39,8 @@ addSqlTest("SimpleTypesTest")
 addSqlTest("FieldNameTest")
 addSqlTest("SelectFieldTest")
 addSqlTest("ExpressionTest")
+addSqlTest("LikeExpressionTest")
+addSqlTest("LikeExpressionSqliteTest")
 addSqlTest("WhereExpressionTest")
 addSqlTest("JoinConstraintExpressionTest")
 addSqlTest("JoinConstraintFieldPairTest")
