In lib Sql: changed table population and implemented in in Schema and driver

--- a/libs/Sql/tests/CMakeLists.txt
+++ b/libs/Sql/tests/CMakeLists.txt
@@ -53,6 +53,7 @@ addSqlTest("SchemaFieldTest")
 addSqlTest("SchemaPrimaryKeyTest")
 addSqlTest("SchemaForeignKeyTest")
 addSqlTest("SchemaTableTest")
+addSqlTest("SchemaTablePopulationTest")
 addSqlTest("SchemaTest")
 addSqlTest("SchemaDriverTest")
 addSqlTest("SchemaDriverSqliteTest")
