--- a/libs/FilterExpression/CMakeLists.txt
+++ b/libs/FilterExpression/CMakeLists.txt
@@ -21,6 +21,7 @@ endif()
 
 # Headers directories
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}/src")
+include_directories("${CMAKE_CURRENT_SOURCE_DIR}/../Algorithm/src")
 # Because some headers are generated during building (config.h, Qt's UIC), we also include build path
 include_directories("${CMAKE_CURRENT_BINARY_DIR}")
 
@@ -32,6 +33,7 @@ string(TOLOWER ${LIBRARY_NAME} LIBRARY_NAME_LC)
 set(LIBRARY_BIN_NAME "mdt${LIBRARY_NAME_LC}")
 # Add output library
 add_library(${LIBRARY_BIN_NAME}${MDTLIB_VERSION_SUFFIX} SHARED ${SOURCES_FILES})
+target_link_libraries(${LIBRARY_BIN_NAME}${MDTLIB_VERSION_SUFFIX} "mdtalgorithm${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(${LIBRARY_BIN_NAME}${MDTLIB_VERSION_SUFFIX} Qt5::Core)
 
 # Translation files
