In lib FilterExpression: refactoring of unit tests

--- a/libs/FilterExpression/tests/CMakeLists.txt
+++ b/libs/FilterExpression/tests/CMakeLists.txt
@@ -4,6 +4,26 @@
 project(multidiagtools)
 enable_testing()
 
+#=============== Helper functions ===========
+
+# Add a test for this FilterExpression lib
+function(addFilterExpressionTest testName)
+  set(complteTestName "MdtFilterExpression${testName}")
+  set(sourceFilePath "src/${testName}.cpp")
+  string(TOLOWER ${complteTestName} executableName)
+  add_executable(${executableName} ${sourceFilePath})
+  target_link_libraries(${executableName} "${LIBRARY_BIN_NAME}${MDTLIB_VERSION_SUFFIX}")
+  target_link_libraries(${executableName} "mdtapplication${MDTLIB_VERSION_SUFFIX}")
+  target_link_libraries(${executableName} Qt5::Test)
+  add_test(${complteTestName} ${CMAKE_CURRENT_BINARY_DIR}/${executableName})
+#  message("Test name: ${complteTestName} , src: ${sourceFilePath} , exec: ${executableName}")
+endfunction()
+
+#================= Tests ====================
+
+addFilterExpressionTest("LikeExpressionTest")
+addFilterExpressionTest("FilterExpressionTest")
+
 # Target MdtFilterExpressionSandbox
 add_executable(mdtfilterexpressionsandbox src/Sandbox.cpp)
 target_link_libraries(mdtfilterexpressionsandbox "${LIBRARY_BIN_NAME}${MDTLIB_VERSION_SUFFIX}")
@@ -26,11 +46,11 @@ target_link_libraries(mdtfilterexpressionprototutorial Qt5::Test)
 add_test(MdtFilterExpressionProtoTutorial ${CMAKE_CURRENT_BINARY_DIR}/mdtfilterexpressionprototutorial)
 
 # Target MdtFilterExpressionFilterExpressionTest
-add_executable(mdtfilterexpressionfilterexpressiontest src/FilterExpressionTest.cpp)
-target_link_libraries(mdtfilterexpressionfilterexpressiontest "${LIBRARY_BIN_NAME}${MDTLIB_VERSION_SUFFIX}")
-target_link_libraries(mdtfilterexpressionfilterexpressiontest "mdtapplication${MDTLIB_VERSION_SUFFIX}")
-target_link_libraries(mdtfilterexpressionfilterexpressiontest Qt5::Test)
-add_test(MdtFilterExpressionFilterExpressionTest ${CMAKE_CURRENT_BINARY_DIR}/mdtfilterexpressionfilterexpressiontest)
+# add_executable(mdtfilterexpressionfilterexpressiontest src/FilterExpressionTest.cpp)
+# target_link_libraries(mdtfilterexpressionfilterexpressiontest "${LIBRARY_BIN_NAME}${MDTLIB_VERSION_SUFFIX}")
+# target_link_libraries(mdtfilterexpressionfilterexpressiontest "mdtapplication${MDTLIB_VERSION_SUFFIX}")
+# target_link_libraries(mdtfilterexpressionfilterexpressiontest Qt5::Test)
+# add_test(MdtFilterExpressionFilterExpressionTest ${CMAKE_CURRENT_BINARY_DIR}/mdtfilterexpressionfilterexpressiontest)
 
 # Target MdtFilterExpressionJoinConstraintExpressionTest
 add_executable(mdtfilterexpressionjoinconstraintexpressiontest src/JoinConstraintExpressionTest.cpp)
