In lib ItemModel: created new VariantTableModel

--- a/libs/ItemModel/tests/CMakeLists.txt
+++ b/libs/ItemModel/tests/CMakeLists.txt
@@ -20,5 +20,6 @@ endfunction()
 
 #================= Tests ====================
 
+addItemModelTest("VariantTableModelTest")
 addItemModelTest("FilterProxyModelTest")
 addItemModelTest("FilterExpressionTest")
