--- a/libs/ItemModel/CMakeLists.txt
+++ b/libs/ItemModel/CMakeLists.txt
@@ -4,7 +4,9 @@
 project(multidiagtools)
 
 # List of source files
-set(SOURCES_FILES 
+set(SOURCES_FILES
+    src/Mdt/ItemModel/VariantTableModel.cpp
+    src/Mdt/ItemModel/VariantTableModelItem.cpp
     src/Mdt/ItemModel/FilterProxyModel.cpp
 )
 
