In lib ItemModel: added resize() and populateColumnWith to VariantTableModel

--- a/libs/ItemModel/tests/CMakeLists.txt
+++ b/libs/ItemModel/tests/CMakeLists.txt
@@ -21,5 +21,6 @@ endfunction()
 #================= Tests ====================
 
 addItemModelTest("VariantTableModelTest")
-addItemModelTest("FilterProxyModelTest")
 addItemModelTest("FilterExpressionTest")
+addItemModelTest("FilterProxyModelTest")
+addItemModelTest("SortProxyModelTest")
