In lib ItemModel: created RelationFilterProxyModel

--- a/libs/ItemModel/tests/CMakeLists.txt
+++ b/libs/ItemModel/tests/CMakeLists.txt
@@ -23,4 +23,5 @@ endfunction()
 addItemModelTest("VariantTableModelTest")
 addItemModelTest("FilterExpressionTest")
 addItemModelTest("FilterProxyModelTest")
+addItemModelTest("RelationFilterProxyModelTest")
 addItemModelTest("SortProxyModelTest")
