In lib ItemEditor: splitting ControllerTest

--- a/libs/ItemEditor/tests/CMakeLists.txt
+++ b/libs/ItemEditor/tests/CMakeLists.txt
@@ -41,4 +41,5 @@ addItemEditorTest("ItemDelegateTest")
 addItemEditorTest("ItemViewTest")
 addItemEditorTest("DataWidgetMapperTest")
 addItemEditorTest("ControllerTest")
+addItemEditorTest("TableViewControllerTest")
 addItemEditorTest("TestEditorTest")
