In lib ItemEditor: splitting ControllerTest

--- a/libs/ItemEditor/tests/CMakeLists.txt
+++ b/libs/ItemEditor/tests/CMakeLists.txt
@@ -42,4 +42,5 @@ addItemEditorTest("ItemViewTest")
 addItemEditorTest("DataWidgetMapperTest")
 addItemEditorTest("ControllerTest")
 addItemEditorTest("TableViewControllerTest")
+addItemEditorTest("WidgetMapperControllerTest")
 addItemEditorTest("TestEditorTest")
