In lib ItemEditor: implemented helper class to handle model/view/delegate/selectionModel

--- a/libs/ItemEditor/tests/CMakeLists.txt
+++ b/libs/ItemEditor/tests/CMakeLists.txt
@@ -41,6 +41,7 @@ addItemEditorTest("ItemDelegateTest")
 addItemEditorTest("ItemViewTest")
 addItemEditorTest("DataWidgetMapperTest")
 addItemEditorTest("ControllerTest")
+addItemEditorTest("ItemViewPrivateContainerTest")
 addItemEditorTest("TableViewControllerTest")
 addItemEditorTest("WidgetMapperControllerTest")
 addItemEditorTest("TestEditorTest")
