--- a/libs/ItemEditor/CMakeLists.txt
+++ b/libs/ItemEditor/CMakeLists.txt
@@ -15,7 +15,10 @@ set(SOURCES_FILES
     src/Mdt/ItemEditor/EditionActions.cpp
     src/Mdt/ItemEditor/ControllerStatePermission.cpp
     src/Mdt/ItemEditor/AbstractController.cpp
+    
     src/Mdt/ItemEditor/AbstractItemViewController.cpp
+    
+    src/Mdt/ItemEditor/ItemViewPrivateContainer.cpp
     src/Mdt/ItemEditor/TableViewController.cpp
     src/Mdt/ItemEditor/MappedWidgetList.cpp
     src/Mdt/ItemEditor/DataWidgetMapper.cpp
