--- a/libs/ItemModel/tests/CMakeLists.txt
+++ b/libs/ItemModel/tests/CMakeLists.txt
@@ -25,3 +25,4 @@ addItemModelTest("FilterExpressionTest")
 addItemModelTest("FilterProxyModelTest")
 addItemModelTest("RelationFilterProxyModelTest")
 addItemModelTest("SortProxyModelTest")
+addItemModelTest("ProxyModelContainerTest")
