--- a/libs/ItemEditor/tests/CMakeLists.txt
+++ b/libs/ItemEditor/tests/CMakeLists.txt
@@ -44,4 +44,5 @@ addItemEditorTest("ControllerTest")
 addItemEditorTest("ItemViewPrivateContainerTest")
 addItemEditorTest("TableViewControllerTest")
 addItemEditorTest("WidgetMapperControllerTest")
+addItemEditorTest("ControllerRelationTest")
 addItemEditorTest("TestEditorTest")
