Crated new ItemEditor_Sql lib + working on hierarchy of controllers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -252,6 +252,7 @@ add_subdirectory("${PROJECT_SOURCE_DIR}/libs/Sql")
 
 # ** Item/View **
 add_subdirectory("${PROJECT_SOURCE_DIR}/libs/ItemEditor")
+add_subdirectory("${PROJECT_SOURCE_DIR}/libs/ItemEditor_Sql")
 
 # SerialPort
 add_subdirectory("${PROJECT_SOURCE_DIR}/libs/SerialPort")
