In lib ItemEditor_Sql: bugfixes in CMakeLists.txt

--- a/libs/ItemEditor_Sql/CMakeLists.txt
+++ b/libs/ItemEditor_Sql/CMakeLists.txt
@@ -14,6 +14,7 @@ include_directories("${CMAKE_CURRENT_SOURCE_DIR}/src")
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}/../FilterExpression/src")
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}/../ItemModel/src")
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}/../ItemEditor/src")
+include_directories("${CMAKE_CURRENT_SOURCE_DIR}/../Sql/src")
 # Because some headers are generated during building (config.h, Qt's UIC), we also build path
 include_directories("${CMAKE_CURRENT_BINARY_DIR}")
 
@@ -30,7 +31,9 @@ target_link_libraries(${LIBRARY_BIN_NAME}${MDTLIB_VERSION_SUFFIX} "mdterrorgui${
 target_link_libraries(${LIBRARY_BIN_NAME}${MDTLIB_VERSION_SUFFIX} "mdtfilterexpression${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(${LIBRARY_BIN_NAME}${MDTLIB_VERSION_SUFFIX} "mdtitemmodel${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(${LIBRARY_BIN_NAME}${MDTLIB_VERSION_SUFFIX} "mdtitemeditor${MDTLIB_VERSION_SUFFIX}")
+target_link_libraries(${LIBRARY_BIN_NAME}${MDTLIB_VERSION_SUFFIX} "mdtsql${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(${LIBRARY_BIN_NAME}${MDTLIB_VERSION_SUFFIX} Qt5::Widgets)
+# target_link_libraries(${LIBRARY_BIN_NAME}${MDTLIB_VERSION_SUFFIX} Qt5::Sql)
 
 # Qt Designer plugins
 # add_subdirectory("qttools")
