--- a/libs/ItemEditor_Sql/tests/CMakeLists.txt
+++ b/libs/ItemEditor_Sql/tests/CMakeLists.txt
@@ -9,14 +9,12 @@ include_directories("${CMAKE_CURRENT_SOURCE_DIR}/../../ItemEditor/tests/src")
 #================= Item/View SQL test library ====================
 
 set(SOURCES_FILES
-#   src/ItemViewTestEdit.cpp
-#   src/TestTableEditionWidget.cpp
-#   src/TestFormEditionWidget.cpp
-#   src/TestWindowEditor.cpp
+  src/Schema/Client.cpp
 )
 
 add_library(mdtitemeditorsqltest SHARED ${SOURCES_FILES})
 target_link_libraries(mdtitemeditorsqltest "${LIBRARY_BIN_NAME}${MDTLIB_VERSION_SUFFIX}")
+target_link_libraries(mdtitemeditorsqltest "mdtitemeditortest")
 target_link_libraries(mdtitemeditorsqltest "mdtapplication${MDTLIB_VERSION_SUFFIX}")
 target_link_libraries(mdtitemeditorsqltest Qt5::Test)
 
@@ -35,4 +33,4 @@ endfunction()
 
 #================= Tests ====================
 
-addItemEditorTest("SqlTableViewControllerTest")
+addItemEditorSqlTest("SqlTableViewControllerTest")
