In lib ItemEditor: created AbstractActionContainer

--- a/libs/ItemEditor/CMakeLists.txt
+++ b/libs/ItemEditor/CMakeLists.txt
@@ -9,6 +9,7 @@ set(SOURCES_FILES
     src/Mdt/ItemEditor/EventCatchItemDelegate.cpp
     src/Mdt/ItemEditor/ItemSelectionModel.cpp
     src/Mdt/ItemEditor/RowChangeEventDispatcher.cpp
+    src/Mdt/ItemEditor/AbstractActionContainer.cpp
     src/Mdt/ItemEditor/NavigationActions.cpp
     src/Mdt/ItemEditor/InsertAction.cpp
     src/Mdt/ItemEditor/RemoveAction.cpp
